[package]
name = "riscvcargopioexample"
edition = "2021"
version = "0.1.0"
authors = []
keywords = []
categories = []
autobins = true
autoexamples = true
autotests = true
autobenches = true
publish = true

[dependencies]
riscv = "0.7"

[dev-dependencies]

[build-dependencies]

[target]

[features]

[patch]

[lib]
path = "src/lib.rs"
name = "riscvcargopioexample"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[profile]
[badges.maintenance]
status = "none"
